# src/Routes/specifications.routes.ts
@@ -1,10 +1,11 @@
 import { request, response, Router } from 'express';
-import { createSpecificationController } from '../modules/cars/useCases/CreateSpecification';
+import { CreateSpecificationController } from '../modules/cars/useCases/CreateSpecification/CreateSpecificationController';
+import { CreateSpecificationUseCase } from '../modules/cars/useCases/CreateSpecification/CreateSpecificationUseCase';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export { specificationsRoutes };
