# src/modules/account/entities/User.ts
@@ -1,16 +1,32 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 import { v4 as uuidv4 } from 'uuid';
 
-@Entity('specifications')
-class Specification {
+@Entity('users')
+class User {
   @PrimaryColumn()
-  id?: string;
+  id: string;
+
   @Column()
   name: string;
+
   @Column()
-  description: string;
+  username: string;
+
+  @Column()
+  email: string;
+
+  @Column()
+  password: string;
+
+  @Column()
+  driver_license: string;
+
+  @Column()
+  isAdmin: boolean;
+
   @CreateDateColumn()
   created_at: Date;
+
   constructor() {
     if (!this.id) {
       this.id = uuidv4();
@@ -18,4 +34,4 @@ class Specification {
   }
 }
 
-export { Specification };
+export { User };
